# marc-os

./: .gitignore  Cargo.toml  build.rs
.cargo/: config
src/: assembly.rs  main.rs  uart.rs
src/asm/: boot.S
src/ld/: kernel_linker.ld
src/lds/: virt.lds
