[package]
name = "marc-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile-register = "0.2.1"

[dev-dependencies]
mockall = "0.11.3"
mockall_double = "0.3.0"

[profile.test]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"